overlays/production/ops/grafana-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - conference.lyon.ph
    secretName: jitsi-messenger-lyon-tls
  rules:
    - host: conference.lyon.ph
      http:
        paths:
        # only match /grafana and paths under /grafana/
        - path: /grafana(/|$)(.*)
          backend:
            serviceName: grafana
            servicePort: http
