overlays/production/ops/haproxy-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: jitsi
spec:
  tls:
  - hosts:
    - conference.lyon.com.ph
    secretName: jitsi-messenger-lyon-tls
  rules:
    - host: conference.lyon.com.ph
      http:
        paths:
        - path: /
          backend:
            serviceName: haproxy
            servicePort: 80
